--- a/app/index.html
+++ b/app/index.html
@@ -6,21 +6,14 @@
 	<link rel="stylesheet" href="bower/normalize.css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
-	
+	<link rel="stylesheet" href="chosen/chosen.css">
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/modernizr.custom.55616.js"></script>
+	<link rel="stylesheet" href="chosen/chosen.css">
+	<script type="text/javascript" src="chosen/chosen.jquery.js"></script>
 </head>
 <body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-64962124-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 	<div class="wrapper">
 		<div class="page-header">
 			<div class="container">
@@ -73,7 +66,7 @@
 					</div>
 					<div class="site-location-view-mode-wrapper">
 						<form action="">
-							<select name="catalog-view" id="catalog-view" class="catalog-view pos-view">
+							<select name="catalog-view" id="catalog-view" class="chosen-select catalog-view pos-view">
   								
   								<option value="lines">Линиями</option>
   								<option value="grid">Сеткой</option>
@@ -155,7 +148,7 @@
 											<img src="img/monitor.png" alt="Apple Thunderbolt Display 27inch">
 										</div>
 										<div class="catalog-goods__desc">
-											<div class="catalog-goods__header">Apple Thunderbolt Display 27"</div>
+											<div class="catalog-goods__header">Apple&nbsp; Thunderbolt Display&nbsp; 27"</div>
 											<div class="catalog-goods__info">
 												<dl class="catalog-goods__item-list">
 													<dt class="catalog-goods__title">Артикул:</dt>
@@ -276,7 +269,7 @@
 										</div>
 										<div class="catalog-goods__desc">
 											<div class="catalog-goods__header">
-												Роутер Wi-Fi Apple AirPort Extreme Base Station
+												Роутер Wi-Fi Apple &nbsp;AirPort Extreme &nbsp;Base &nbsp;Station
 											</div>
 											<div class="catalog-goods__info">
 												<dl class="catalog-goods__item-list">
@@ -375,5 +368,12 @@
 		</div>
 	</div>
 	<script src="js/script.js"></script>
+	<script>
+		$(".chosen-select").chosen();
+		$(".chosen-select").chosen({disable_search_threshold: 10});
+		$(".chosen-search").remove();
+		
+	</script>
+	
 </body>
 </html>
