--- a/app/index.html
+++ b/app/index.html
@@ -34,13 +34,13 @@
 				</div>
 				<div class="page-header__menu-wrapper">
 					<ul class="page-header__menu">
-						<li class="page-header__menu-item"><a class="page-header__menu-link" href="">Мобильные телефоны</a></li>
-						<li class="page-header__menu-item"><a class="page-header__menu-link page-header__menu-link--current" href="">Планшеты</a></li>
-						<li class="page-header__menu-item"><a class="page-header__menu-link" href="">Mp3 плееры</a></li>
-						<li class="page-header__menu-item"><a class="page-header__menu-link" href="">Персональные компьютеры</a></li>
-						<li class="page-header__menu-item"><a class="page-header__menu-link" href="">Ноутбуки</a></li>
-						<li class="page-header__menu-item"><a class="page-header__menu-link" href="">Apple TV</a></li>
-						<li class="page-header__menu-item"><a class="page-header__menu-link" href="">Аксессуары</a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link" href=""><span class="page-header__menu-text">Мобильные телефоны</span></a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link page-header__menu-link--current" href=""><span class="page-header__menu-text">Планшеты</span></a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link" href=""><span class="page-header__menu-text">Mp3 плееры</span></a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link" href=""><span class="page-header__menu-text">Персональные компьютеры</span></a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link" href=""><span class="page-header__menu-text">Ноутбуки</span></a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link" href=""><span class="page-header__menu-text">Apple TV</span></a></li>
+						<li class="page-header__menu-item"><a class="page-header__menu-link" href=""><span class="page-header__menu-text">Аксессуары</span></a></li>
 					</ul>
 				</div>
 			</div><!--end container-->
@@ -158,9 +158,9 @@
 													<dt class="catalog-goods__title">Цвет:</dt>
 													<dd class="catalog-goods__value">серебристый</dd>
 													<dt class="catalog-goods__title">Размер:</dt>
-													<dd class="catalog-goods__title">1280*1245*90</dd>
+													<dd class="catalog-goods__value">1280*1245*90</dd>
 													<dt class="catalog-goods__title">Вес:</dt> 
-													<dd class="catalog-goods__title">9 кг</dd>
+													<dd class="catalog-goods__value--end">9 кг</dd>
 												</dl>	
 											</div>
 										</div>
@@ -182,9 +182,9 @@
 													<dt class="catalog-goods__title">Цвет:</dt>
 													<dd class="catalog-goods__value">серебристый</dd>
 													<dt class="catalog-goods__title">Размер:</dt>
-													<dd class="catalog-goods__title">1280*1245*90</dd>
+													<dd class="catalog-goods__value">1280*1245*90</dd>
 													<dt class="catalog-goods__title">Вес:</dt> 
-													<dd class="catalog-goods__title">9 кг</dd>
+													<dd class="catalog-goods__value--end">9 кг</dd>
 												</dl>	
 											</div>
 										</div>
@@ -206,9 +206,9 @@
 													<dt class="catalog-goods__title">Цвет:</dt>
 													<dd class="catalog-goods__value">серебристый</dd>
 													<dt class="catalog-goods__title">Размер:</dt>
-													<dd class="catalog-goods__title">1280*1245*90</dd>
+													<dd class="catalog-goods__value">1280*1245*90</dd>
 													<dt class="catalog-goods__title">Вес:</dt> 
-													<dd class="catalog-goods__title">9 кг</dd>
+													<dd class="catalog-goods__value--end">9 кг</dd>
 												</dl>	
 											</div>
 										</div>
@@ -230,9 +230,9 @@
 													<dt class="catalog-goods__title">Цвет:</dt>
 													<dd class="catalog-goods__value">серебристый</dd>
 													<dt class="catalog-goods__title">Размер:</dt>
-													<dd class="catalog-goods__title">1280*1245*90</dd>
+													<dd class="catalog-goods__value">1280*1245*90</dd>
 													<dt class="catalog-goods__title">Вес:</dt> 
-													<dd class="catalog-goods__title">9 кг</dd>
+													<dd class="catalog-goods__value--end">9 кг</dd>
 												</dl>	
 											</div>
 										</div>
@@ -254,9 +254,9 @@
 													<dt class="catalog-goods__title">Цвет:</dt>
 													<dd class="catalog-goods__value">серебристый</dd>
 													<dt class="catalog-goods__title">Размер:</dt>
-													<dd class="catalog-goods__title">1280*1245*90</dd>
+													<dd class="catalog-goods__value">1280*1245*90</dd>
 													<dt class="catalog-goods__title">Вес:</dt> 
-													<dd class="catalog-goods__title catalog-goods__title--end">9 кг</dd>
+													<dd class="catalog-goods__value--end">9 кг</dd>
 												</dl>	
 											</div>
 										</div>
@@ -280,9 +280,9 @@
 													<dt class="catalog-goods__title">Цвет:</dt>
 													<dd class="catalog-goods__value">серебристый</dd>
 													<dt class="catalog-goods__title">Размер:</dt>
-													<dd class="catalog-goods__title">1280*1245*90</dd>
+													<dd class="catalog-goods__value">1280*1245*90</dd>
 													<dt class="catalog-goods__title">Вес:</dt> 
-													<dd class="catalog-goods__title">9 кг</dd>
+													<dd class="catalog-goods__value--end">9 кг</dd>
 												</dl>	
 											</div>
 										</div>
